@@ -140,10 +140,6 @@
   </script>
 {% endblock map-javascript %}
 
-{# Should this block be zapped?  It *is* already in lizard-ui... #}
-{% block sidebar %}
-{% endblock sidebar %}
-
 {% block above-content %}
 <ul class="map-actions">
   {% if animation_slider %}
